welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:4: error: value ! is not a member of Nothing
possible cause: maybe a semicolon is missing before `value !'?
  } !negative match {
    ^posNeg:5: error: not found: value &&
    case ((a < 0) && (b > 0)) => return true
                  ^posNeg:5: error: not found: value <
    case ((a < 0) && (b > 0)) => return true
             ^posNeg:5: error: not found: value >
    case ((a < 0) && (b > 0)) => return true
                        ^posNeg:6: error: not found: value &&
    case ((a > 0) && (b < 0)) => return true
                  ^posNeg:6: error: not found: value >
    case ((a > 0) && (b < 0)) => return true
             ^posNeg:6: error: not found: value <
    case ((a > 0) && (b < 0)) => return true
                        ^posNeg:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (a < 0 && b < 0 && negative) {
  ^